@@ -46,4 +46,5 @@
     <string id="30513">What to watch</string>
     <string id="30514">Related Videos</string>
     <string id="30515">Auto-Remove from 'Watch Later'</string>
+    <string id="30516">Folders</string>
 </strings>
