@@ -46,4 +46,5 @@
     <string id="30513">Empfohlene Videos</string>
     <string id="30514">Ähnliche Videos</string>
     <string id="30515">Auto-Entfernen für "Später ansehen"</string>
+    <string id="30516">Verzeichnisse</string>
 </strings>
