@@ -19,4 +19,16 @@
         <setting id="kodion.search.size" type="enum" label="30023" values="0|10|20|30|40|50" default="5" />
         <setting id="kodion.cache.size" type="slider" label="30024" values="1|2|20|30|40|50" default="5" range="1,25" option="int"/>
     </category>
+
+    <category label="30516">
+        <setting id="youtube.folder.my_subscriptions.show" type="bool" label="30510" default="true"/>
+        <setting id="youtube.folder.what_to_watch.show" type="bool" label="30513" default="true"/>
+        <setting id="youtube.folder.my_channel.show" type="bool" label="30507" default="true"/>
+        <setting id="youtube.folder.watch_later.show" type="bool" label="30107" default="true"/>
+        <setting id="youtube.folder.liked_videos.show" type="bool" label="30508" default="true"/>
+        <setting id="youtube.folder.history.show" type="bool" label="30509" default="false"/>
+        <setting id="youtube.folder.playlists.show" type="bool" label="30501" default="true"/>
+        <setting id="youtube.folder.subscriptions.show" type="bool" label="30504" default="true"/>
+        <setting id="youtube.folder.browse_channels.show" type="bool" label="30512" default="true"/>
+    </category>
 </settings>
